--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -52,7 +52,7 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 20px;
+    padding: 5px 20px;
     z-index: 1000;
     backdrop-filter: blur(5px);
     display: flex;
@@ -102,6 +102,7 @@ nav .logo img {
     box-shadow: 0 0 10px rgba(255, 255, 255, 0.7);
     animation: girar3D 20s linear infinite;
     object-fit: contain;
+
 }
 
 /* Animación del logo */
@@ -481,3 +482,64 @@ nav ul.nav-links li:hover a {
 html {
     scroll-behavior: smooth;
 }
+
+/* Estilos para los íconos sociales */
+/* Estilos para los íconos sociales */
+.social-icons {
+    display: flex;
+    justify-content: center; /* Centra los íconos horizontalmente */
+    gap: 20px; /* Espacio entre los íconos */
+    margin-top: 20px; /* Espacio superior */
+}
+
+.social-icon {
+    width: 100px; /* Ajusta el tamaño según tu preferencia */
+    height: 100px;
+    border-radius: 50%; /* Hace que la imagen sea circular */
+    box-shadow: 0 0 10px rgba(162, 0, 255, 0.7), /* Sombra neón */
+                0 0 20px rgba(0, 102, 255, 0.5), 
+                0 0 30px rgba(38, 0, 255, 0.3);
+    transition: transform 0.3s, box-shadow 0.3s;
+    cursor: pointer; /* Cambia el cursor al pasar sobre la imagen */
+}
+
+.social-icon:hover {
+    transform: scale(1.1); /* Efecto de aumento al pasar el cursor */
+    box-shadow: 0 0 15px rgba(0, 47, 255, 0.9),
+                0 0 25px rgba(234, 0, 255, 0.7),
+                0 0 35px rgba(0, 255, 255, 0.5);
+}
+
+/* Opcional: Ajustes para pantallas pequeñas */
+@media screen and (max-width: 768px) {
+    .social-icons {
+        flex-direction: row; /* Coloca los íconos en una columna */
+        gap: 15px; /* Espacio entre los íconos */
+    }
+
+    .social-icon {
+        width: 80px;
+        height: 80px;
+    }
+}
+
+/* Contenedor responsivo para el mapa */
+.map-container {
+    position: relative;
+    width: 100%;
+    padding-bottom: 56.25%; /* Relación de aspecto 16:9 */
+    height: 0;
+    overflow: hidden;
+    border-radius: 15px;
+}
+
+.map-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 0;
+    border-radius: 15px;
+}
+
