actualizacion de membresias, audio, y normativas

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -491,9 +491,10 @@ nav ul.nav-links li:hover a {
 }
 
 /* Scroll Suave */
+/*
 html {
     scroll-behavior: smooth;
-}
+}*/
 
 /* Estilos para los íconos sociales */
 /* Estilos para los íconos sociales */
