--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -687,7 +687,8 @@ body {
 }
 
 .neon-light {
-    --color-membresia: #32CD32; /* Verde Neón */
+
+    --color-membresia:#B0C4DE; /* #B0C4DE gris Neón */
     border-color: var(--color-membresia);
     box-shadow: 0 0 15px var(--color-membresia);
 }
